--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"Blog Title",
+    "title":"You can do it",
     "subTitle":"Blog description",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last"
